--- a/src/app/root/app-header/app-header.component.html
+++ b/src/app/root/app-header/app-header.component.html
@@ -1,3 +1,9 @@
+<nav class="navbar navbar-light bg-light">
+  <a href="#" class="navbar-brand">GiftShop</a>
+  <ul class="navbar-nav">
+    <li class="navbar-item">User</li>
+  </ul>
+</nav>
 <p>
-app-header works!
+  app-header works!
 </p>
